erDiagram
    USERS {
        string id PK
        string name
        text password
        string email
        string role "mentor || admin"
        deleted_at timestamp "null"
    }

    STUDENT {
        string id PK
        string mentor_id FK "Menandai USERs Utama/Wali Kelas"
        string name
        text password
        string profile_img
        string cover_img
        int age
        string learning_level
        string fluency
        string status
        string contact
        date join_date
        last_progress timestamp
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp "null"
    }

    PROGRESS {
        string id PK
        string student_id FK
        string mentor_id FK "Siapa yang menilai HARI INI (bisa guru pengganti)"
        string surah
        string status 
        int ayat_start
        int ayat_end
        string notes
        progress_date date
    }

    MEMORIZE {
        string id PK
        string student_id FK
        string verified_by FK "Siapa yang memverifikasi hafalan ini"
        string surah
        int surah_number
        int ayat_start
        int ayat_end
        string status "memorized || in_progress || murojaah || forgotten"
        string notes
        timestamp memorized_at
        timestamp last_reviewed_at
        timestamp created_at
        timestamp updated_at
    }

    %% Relasi
    USERS ||--o{ STUDENT : "membina (Wali Kelas)"
    USERS ||--o{ PROGRESS : "mencatat hafalan"
    STUDENT ||--o{ PROGRESS : "memiliki"
    STUDENT ||--o{ MEMORIZE : "menghafal"
    USERS ||--o{ MEMORIZE : "memverifikasi"